--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase": "^10.7.1",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
-    "luaparse": "^0.3.1",
+    "luaparse": "github:fstirlitz/luaparse#lua5.4",
     "ts-node": "^10.9.1"
   },
   "scripts": {
