--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.2",
   "license": "MIT",
   "dependencies": {
+    "binary-insert": "^1.2.1",
+    "binary-search": "^1.3.6",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
