Use dumped-game-data.json from Data Dump mod
Makes this data available both to code generation & runtime. Would
like to eventually switch some of the code generation (methods.ts, dinstr.ts, etc)
to runtime parsing of the dumped-game-data.json.

Since the dumped-game-data.json can be included in the repository with permission
from Stage, the resulting generated files have been gitignored to reduce merge
conflicts resulting from changes to geninstr.ts and such.

Developers, and CI, must now run `npm run generate` when switching branches or
pulling new commits.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ website/compiler.js
 website/bundle.out.js
 website/monaco-editor-0.45.0
 
+# Generated files
+behavior.d.ts
+behavior_dts.ts
+methods.ts
+decompile/dsinstr.ts
+
 # Logs
 logs
 *.log
