--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,24 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+    - run: npm run generate
+    - name: Archive generated files
+      uses: actions/upload-artifact@v4
+      with:
+        name: generated-files-${{ matrix.node-version }}
+        path: |
+          behavior.d.ts
+          behavior_dts.ts
+          methods.ts
+          decompile/dsinstr.ts
     - run: npm test
     - run: npm run build --if-present
     - run: npm run esbuild
+    - name: Archive build files
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-files-${{ matrix.node-version }}
+        path: |
+          dist
+          website/bundle.out.js
+          website/compiler.js
