--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "binary-insert": "^1.2.1",
     "binary-search": "^1.3.6",
     "clipboardy": "^4.0.0",
+    "ts-api-utils": "^1.3.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
