--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "binary-insert": "^1.2.1",
     "binary-search": "^1.3.6",
+    "clipboardy": "^4.0.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
@@ -36,7 +37,8 @@
   "bin": {
     "js2ds": "dist/js2ds.js",
     "ds-as": "dist/as.js",
-    "ds-disas": "dist/disas.js"
+    "ds-disas": "dist/disas.js",
+    "ds-watch": "dist/watch.js"
   },
   "types": "behavior.d.ts",
   "engines": {
