--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "firebase": "^10.7.1",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
-    "luaparse": "github:fstirlitz/luaparse#lua5.4",
     "ts-node": "^10.9.1"
   },
   "scripts": {
     "esbuild": "esbuild bundle.ts --outfile=website/bundle.out.js --bundle --format=esm --target=safari15 --external:util --external:node:* && esbuild compiler_bundle.ts --bundle --format=esm --target=safari15 --minify --outfile=website/compiler.js --external:path --external:fs --external:util",
     "build": "tsc -p tsconfig.json",
-    "test": "jest"
+    "test": "jest",
+    "generate": "ts-node scripts/geninstr.ts"
   },
   "files": [
     "dist",
