--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.10.0",
     "@typescript/vfs": "1.5.0",
     "babel-jest": "^29.7.0",
@@ -21,13 +22,15 @@
     "firebase": "^10.7.1",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.1"
   },
   "scripts": {
     "esbuild": "esbuild bundle.ts --outfile=website/bundle.out.js --bundle --sourcemap --format=esm --target=safari15 --external:util --external:node:* && esbuild compiler_bundle.ts --bundle --sourcemap --format=esm --target=safari15 --minify --outfile=website/compiler.js --external:path --external:fs --external:util",
     "build": "tsc -p tsconfig.json",
     "test": "jest",
-    "generate": "ts-node scripts/geninstr.ts"
+    "generate": "ts-node scripts/geninstr.ts",
+    "format": "prettier -w ."
   },
   "files": [
     "dist",
